--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        My Home Page
+       <h1>Home page</h1>
         <nav>
             <a href="blog.html">Blogs</a>
         </nav>
