--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -31,8 +31,8 @@
         </article>
 
         <article>
-            <h3>Thrid Article</h3>
-            <small>Posted 2nd July</small>
+            <h3>Third Article</h3>
+            <small>Posted 9nd July</small>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, excepturi similique, corporis, ut officia soluta rem itaque voluptatum eveniet accusantium tempora omnis beatae laudantium laborum et labore ea minus quam!</p>
             <a href="#">Read More</a>
         </article>
