--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -8,7 +8,7 @@
 <body>
 
     <header>
-        <h1>My Blog</h1>
+        <h1>My Blog Rahul2</h1>
         <nav>
             <a href="index.html">Home</a>
         </nav>
